welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:1: error: Missing closing brace `}' assumed here
var diag = 0;
^